# eugraph

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  architecture.md  notes.md  os  plan.md  tck_results.md  test_shell_input.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  code-quality.yml  tck-report.yml
Testing/: test_merge.sh
docs/: README.md  ast-reference.md  build-guide.md  cypher-parser-design.md  cypher-syntax.md  data-model.md  ddl.md  debugging-notes.md  design-decisions.md  development-phases.md  directory-structure.md  index_design.md  interfaces.md  kv-encoding.md  loader-design.md  metadata-service-design.md  multi-graph.md  overview.md  query-engine-design.md  server-shell-design.md  system-architecture.md  tck_failure_classification.md  type-definitions.md  usage.md
docs/architecture/: cascades-optimizer.md  data-model.md  system-architecture.md  type-definitions.md
docs/debugging/: debugging-notes.md
docs/features/: multi-label-design.md  unlabeled-node-property-design.md
docs/history/: design-decisions.md  development-phases.md
docs/program/design/: loader-design.md  server-shell-design.md
docs/program/usage/: loader.md  server.md  shell.md
docs/program_design/: loader-design.md  server-shell-design.md
docs/program_usage/: loader.md  server.md  shell.md
docs/query/: demand-pull-lowering-design.md  execution-model.md  projection-extract-design.md  slot-id-design.md  transaction-model.md
docs/query/engine/: binder-chunk-design.md  binder-chunk-progress.md  create-op-redesign.md  deferred-property-loading.md  execution-model.md  merge-clause-design.md  physical-operator-audit.md  projection-extract-design.md  query-engine-design.md  slot-id-design.md  temporal-property-roundtrip-design.md  transaction-model.md
docs/query/optimizer/: cascades-optimizer.md
docs/query/syntax/: ast-reference.md  cypher-parser-design.md  cypher-syntax.md
docs/query/testing/: correctness-testing-design.md  cypher-correctness-test-plan.md
docs/refactor/: mixed-mode-design.md
docs/service/: rpc-service.md  server-shell-design.md  server.md  shell.md
docs/storage/: ddl.md  index_design.md  interfaces.md  kv-encoding.md  metadata-service-design.md  multi-graph.md
docs/tests/: tck-guide.md  tck-results.md
docs/tools/: loader.md
grammar/: CypherLexer.g4  CypherParser.g4
ports/mvfst/: portfile.cmake
proto/: eugraph.thrift
scripts/: annotate_skip.py  check-format.sh  compare_tck.py  extract_tck.py  gen_tck_report.py
src/common/types/: constants.hpp  error.hpp  graph_types.hpp  temporal_value.cpp  temporal_value.hpp
src/compute_service/binder/: bind_context.hpp  binder.cpp  binder.hpp  bound_logical_plan.hpp  bound_logical_plan_fwd.hpp  bound_type.hpp  plan_binder.cpp  plan_binder.hpp
src/compute_service/catalog/: catalog.cpp
src/compute_service/executor/: async_graph_store.cpp  async_graph_store.hpp  data_chunk.hpp  expression_evaluator.cpp  expression_evaluator.hpp  io_scheduler.hpp  query_executor.cpp  query_executor.hpp  row.hpp  vectorized_evaluator.cpp  vectorized_evaluator.hpp
src/compute_service/function/: batch_ops.cpp  batch_ops.hpp  function_def.hpp  function_registry.cpp  function_registry.hpp
src/compute_service/logical_plan/: logical_operator.hpp  logical_operator_fwd.hpp  logical_plan.hpp  logical_plan_builder.cpp  logical_plan_builder.hpp  logical_plan_visitor.hpp
src/compute_service/optimizer/: logical_optimizer.cpp  logical_optimizer.hpp  memo.cpp  memo.hpp  opt_rule.cpp  opt_rule.hpp  task.cpp  task.hpp
src/compute_service/parser/: ast.hpp  cypher_parser.cpp  cypher_parser.hpp  index_ddl_parser.cpp  index_ddl_parser.hpp
src/compute_service/physical_plan/: physical_operator.cpp  physical_operator.hpp  physical_operator_base.cpp  physical_operator_base.hpp  physical_planner.cpp  physical_planner.hpp
src/compute_service/planner/: bind_context.hpp  binder.cpp  (+6 more)
src/gen-cpp2/: EuGraphService.cpp  EuGraphService.h  EuGraphService.tcc  EuGraphServiceAsyncClient.cpp  EuGraphServiceAsyncClient.h  EuGraphService_custom_protocol.h  EuGraphService_processmap_binary.cpp  EuGraphService_processmap_compact.cpp  eugraph_clients.h  eugraph_constants.cpp  eugraph_constants.h  eugraph_data.cpp  eugraph_data.h  eugraph_for_each_field.h  eugraph_handlers.h  eugraph_metadata.cpp  eugraph_metadata.h  eugraph_types.cpp  eugraph_types.h  eugraph_types.tcc  eugraph_types_binary.cpp  eugraph_types_compact.cpp  eugraph_types_custom_protocol.h  eugraph_types_fwd.h  eugraph_visit_by_thrift_field_metadata.h  eugraph_visit_union.h  eugraph_visitation.h
src/loader/: csv_loader.cpp  csv_loader.hpp  loader_main.cpp
src/metadata_service/: metadata_codec.cpp  metadata_service.cpp  metadata_service.hpp
src/server/: eugraph_handler.cpp  eugraph_handler.hpp  eugraph_server_main.cpp
src/shell/: rpc_client.cpp  rpc_client.hpp  shell_main.cpp  shell_repl.cpp  shell_repl.hpp
src/storage/: graph_manager.cpp  graph_manager.hpp  graph_schema.hpp  graph_store.hpp  graph_store_impl.cpp  graph_store_impl.hpp  io_scheduler.hpp  wt_connection.cpp  wt_connection.hpp  wt_cursor.cpp  wt_cursor.hpp  wt_session.cpp  wt_session.hpp  wt_store_base.cpp  wt_store_base.hpp
src/thrift_fmt/: result_format.cpp  result_format.hpp
tests/: correctness_registration.cpp  json_parser.h  test_catalog_and_graph_manager.cpp  test_correctness.cpp  test_cypher_parser.cpp  test_graph_store.cpp  test_graph_store_wt.cpp  test_index_e2e.cpp  test_index_key_codec.cpp  test_index_store.cpp  test_key_codec.cpp  test_loader_integration.cpp  test_logical_plan.cpp  test_metadata_service.cpp  test_optimizer.cpp  test_query_executor.cpp  test_restart_persistence.cpp  test_rpc_integration.cpp  test_topology_types.cpp  test_value_codec.cpp  test_vertex_serialization.cpp  test_wiredtiger.cpp  test_wiredtiger_store.cpp
tests/correctness/: README.md  TEST_REPORT.md  index.json
tests/tck/: CMakeLists.txt  copy_ccr_artifacts.sh  run_tck.py  tck_context.cpp  tck_context.hpp  tck_steps.cpp  tck_types.hpp
(+449 files in other folders)
